--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
-    
+    <div>
+        <h1>Pomodoro timer</h1>
+    </div>
+    <div id="timer">25</div>
+    <div><button id="chrono">chrono</button></div>
 </body>
 </html>
