ajout du chronomètre

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div>
         <h1>Pomodoro timer</h1>
     </div>
-    <div id="timer">25</div>
+    <div id ="timer">
+    <p id="minutes">25</p><p>:</p><p id="secondes">04</p>
+    </div>
     <div><button id="chrono">chrono</button></div>
 </body>
 </html>
