--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div>
         <h1>Pomodoro timer</h1>
     </div>
-    <div id = "etat">work</div>
+    <div id = "etat">travail</div>
     <div id ="timer">
-    <p id="minutes">25</p><p>:</p><p id="secondes">00</p>
+    <p id="minutes">2</p><p>:</p><p id="secondes">00</p>
     </div>
     <div><button id="start">start</button></div>
 </body>
