--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <p id = "minutes">25</p><p>:</p><p id = "secondes">00</p>
         </div>
         <div><button id = "start">start</button></div>
-        <div>
+        <form action="" method="get" class="test">
             <div id = "travail">
                 <div>Temps de travail : </div>
-                <div><input type="number" id = "Temps_Travail" oninput="calc()" value="3"></div>
+                <div><input type="number" id = "Temps_Travail"></div>
             </div>
             <div id = "pause">
                 <div>Temps de pause : </div>
-                <div><input type="number" id = "Temps_Pause" oninput="calc()" value="3"></div>
+                <div><input type="number" id = "Temps_Pause"></div>
             </div>
-        </div>
+        </form>
     </body>
 </html>
