--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <!-- <link rel="icon" type="image/x-icon" href="nom de l'image"> -->
         <link rel="stylesheet" href="style.css">
         <script defer src="script.js"></script>
     </head>
@@ -26,5 +27,6 @@
                 <div><input type="number" id = "Temps_Pause"></div>
             </div>
         </form>
+        <div><button id = "soumettre">soumettre</button></div>
     </body>
 </html>
