ajout des dossiers js et css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p id = "minutes">25</p><p>:</p><p id = "secondes">00</p>
         </div>
         <div><button id = "start">start</button></div>
-        <form action="" method="get" class="test">
+        <form method="get" class="test">
             <div id = "travail">
                 <div>Temps de travail : </div>
                 <div><input type="number" id = "Temps_Travail"></div>
