--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="icon" type="image/x-icon" href="image/stopwatch-solid.svg"> <!-- Icône de l'onglet du navigateur -->
     <link rel="stylesheet" href="./css/style.css"> <!-- Lien vers la feuille de style CSS -->
     <script defer src="./js/script.js"></script> <!-- Lien vers le script JavaScript, différé -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
