--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <div id="etat">travail</div> <!-- Affichage de l'état (travail/pause) -->
         <div id="chronomètre">
-            <h id="minutes">25</h><p>:</p><h id="secondes">00</h> <!-- Affichage du chronomètre -->
+            <h5 id="minutes">25</h5><h5>:</h5><h5 id="secondes">00</h5> <!-- Affichage du chronomètre -->
         </div>
         <div><button id="depart">depart</button></div> <!-- Bouton de départ du chronomètre -->
 
